Additional spacing fix

--- a/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/upgrade-modal.scss
+++ b/client/landing/stepper/declarative-flow/internals/steps-repository/design-setup/upgrade-modal.scss
@@ -131,7 +131,7 @@ $design-button-primary-hover-color: var(--color-primary-60);
 			padding: 9px 25px;
 			border-radius: 4px;
 			font-weight: 500;
-			margin-bottom: 15px;
+			margin-bottom: 0;
 			box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05) !important;
 
 			&.is-primary {
@@ -157,6 +157,7 @@ $design-button-primary-hover-color: var(--color-primary-60);
 			margin-left: 0;
 			padding-left: 0;
 			margin-top: 0;
+			margin-bottom: 0;
 		}
 
 		li {
